# image-viewer

./: README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: _config.yml  index.html
scripts/: publish.sh
src/: main.ts  menu.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
